src/assets/styles/ui/Assets/_assets-table.scss
.assets-block {
    .ant-collapse-header {
        padding: 12px 16px !important;

        .ant-collapse-expand-icon {
            margin: auto;

            .ant-collapse-arrow {
                // padding: 4px;
                // border-radius: 8px;
                // border: 1px solid var(--#{$prefix}assets-arrow-border-color) !important;
                transition: all 0.2s ease-in-out;

                svg {
                    width: 16px;
                    height: 16px;
                    fill: var(--#{$prefix}assets-arrow-color) !important;
                }
            }
        }
    }

    &-panel {
        background-color: var(--#{$prefix}secondary-background) !important;
        border: 1px solid var(--#{$prefix}assets-border-color) !important;
    }

    &,
    &-panel,
    .ant-collapse-item {
        border-radius: 16px !important;
        transition: all 0.2s ease-in-out;
    }

    .ant-collapse-content-box {
        padding: 16px !important;
        padding-block: 0 16px !important;
    }

    &>&-panel:not(:last-child) {
        margin-bottom: 16px;
    }

    .ant-collapse-item:hover,
    .ant-collapse-item.active-panel {
        border-color: var(--#{$prefix}assets-arrow-hover-color) !important;
        // .ant-collapse-arrow {
        // background-color: var(--#{$prefix}assets-arrow-hover-color) !important;
        // border-color: var(--#{$prefix}white) !important;
        // svg {
        //     fill: var(--#{$prefix}white) !important;
        // }
        // }
    }
}

.assets-table {
    border-color: var(--#{$prefix}assets-border-color) !important;
    background-color: var(--#{$prefix}secondary-background) !important;
    border-radius: 8px;

    .ant-table-title,
    .ant-table-cell,
    .ant-table-row,
    .ant-table-container,
    tr,
    tbody,
    table,
    td {
        border-width: 0.1px !important;
        border-color: var(--#{$prefix}assets-header-border-color) !important;
        background-color: var(--#{$prefix}secondary-background) !important;
    }

    .ant-table-thead tr th {
        border-bottom: 1px solid var(--#{$prefix}assets-border-color) !important;
    }

    .ant-table-cell {
        vertical-align: middle !important;
        padding: 0 !important;
    }

    .ant-table-tbody>tr:last-child>td {
        border-bottom: none !important;
        padding-bottom: 0 !important;
    }

    .ant-table-thead .ant-table-cell {
        font-weight: 300;
        color: var(--#{$prefix}neutral-text);
        font-size: var(--#{$prefix}small-sm-fs);

        p {
            display: flex;
            font-weight: 400;
            color: var(--#{$prefix}primary-text);
        }

        &::before,
        &::after {
            display: none !important;
        }

        .name::before {
            content: "\2022";
            margin: 0 4px;
            color: var(--#{$prefix}neutral-text);
        }
    }

    .assets-table .ant-table-thead .ant-table-cell {
        height: 36px;
    }

    .ant-table-tbody>.ant-table-row>.ant-table-cell {
        height: 48px;

        .assets__item {
            padding: 8px 0;
        }
    }

    @keyframes fadeIn {
        from {
            opacity: 0;
        }

        to {
            opacity: 1;
        }
    }
}

.ant-spin-dot.ant-spin-dot-spin i {
    background-color: var(--#{$prefix}banner-logo-color) !important;
}

.ant-table-column-sorter-up.active,
.ant-table-column-sorter-down.active {
    color: var(--#{$prefix}banner-logo-color) !important;
}

.ant-table-row-expand-icon:active,
.ant-table-row-expand-icon:focus,
.ant-table-row-expand-icon:hover {
    background-color: var(--#{$prefix}assets-arrow-hover-color) !important;
    border-color: var(--#{$prefix}white) !important;
    color: var(--#{$prefix}white) !important;
}

.ant-table-row-expand-icon {
    background: transparent !important;
    color: var(--#{$prefix}assets-arrow-color) !important;
    border-color: var(--#{$prefix}assets-arrow-border-color) !important;
}

.ant-spin-container {
    &::after {
        background-color: var(--#{$prefix}secondary-background) !important;
    }
}

